# test-rust-service-2

./: Cargo.toml  README.md
config/: action.toml  lib.toml  service.toml
scripts/: .test.sh.swp  all.sh  best-practices.sh  build.sh  install.sh  out.txt  run.sh  security-checks.sh  test.sh  update_scripts.sh
scripts/functions/: find_config.sh  find_config_file.sh  get_build_artifact.sh  get_cargo_config_value.sh  get_common_tests_cargo_file.sh  get_config_file.sh  get_install_directory.sh  get_local_config_directory.sh  get_local_config_file.sh  get_project_dir.sh  get_project_name.sh  get_project_type.sh  get_script_directory.sh  get_status_icon.sh  get_target.sh  get_test_categories.sh  get_test_dir.sh  print_test_line.sh  print_test_status_value.sh  read_config.sh  test_counter.sh
scripts/scripts/: best-practices.sh  build.sh  install.sh  security-checks.sh  test.sh
scripts/scripts/functions/: find_config.sh  test_counter.sh
src/: main.rs
src/action/: exec.rs
tests/: common.rs  integration.rs  integration_test_rust_service_2.rs  security_checks.rs  security_checks_test_rust_service_2.rs  unit.rs  unit_tests.rs  unit_tests_test_rust_service_2.rs
tests/integration/: time_output_test.rs
tests/integration_test_rust_service_2/app/: mod.rs  test_service_startup.rs
tests/security_checks_test_rust_service_2/app/: mod.rs  test_root_check.rs
tests/security_checks_test_rust_service_2/common/: mod.rs
tests/unit_tests/: time_action_test.rs
tests/unit_tests_test_rust_service_2/app/: mod.rs  test_configuration.rs
