[package]
name = "test-rust-service"
version = "0.1.0"
edition = "2024"

[lints.rust]
non_snake_case = "allow"

[dependencies]
rust-service = { path = "../rust-service" }
chrono = "0.4"
log = { version = "0.4.28", features = ["std"] }
serde = { version = "1.0.226", features = ["derive"] }
toml = "0.9.7"
ctrlc = "3.5.0"
libc = "0.2.176"

[dev-dependencies]
regex = "1.0"

[[test]]
name = "integration"
path = "tests/integration.rs"

[[test]]
name = "security_checks"
path = "tests/security_checks.rs"

[[test]]
name = "unit_tests"
path = "tests/unit_tests.rs"
