[package]
name = "test-rust-service"
version = "0.1.0"
edition = "2024"

[package.metadata]
install_dir = "/opt/test-rust-service"
rust_service_path = "../rust-service"

[[bin]]
name = "test-rust-service"
path = "src/main.rs"

[lints.rust]
non_snake_case = "allow"

[dependencies]
rust-service = { path = "../rust-service" }
chrono = "0.4"
log = { version = "0.4.28", features = ["std"] }
serde = { version = "1.0.226", features = ["derive"] }
toml = "0.9.7"
ctrlc = "3.5.0"
libc = "0.2.176"
thiserror = "1.0"

[dev-dependencies]
regex = "1.0"
rust-common-tests = { path = "../rust-common-tests" }
walkdir = "2.0"

[[test]]
name = "integration"
path = "tests/integration.rs"

[[test]]
name = "integration_common"
path = "../rust-common-tests/tests/integration_common.rs"

[[test]]
name = "security_checks"
path = "tests/security_checks.rs"

[[test]]
name = "security_checks_common"
path = "../rust-common-tests/tests/security_checks_common.rs"

[[test]]
name = "unit"
path = "tests/unit.rs"

[[test]]
name = "unit_tests_common"
path = "../rust-common-tests/tests/unit_tests_common.rs"
